Added SauceTypeController documentation
